# python-sdk

./: .gitignore  .pypirc  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  index.html  mint.json  objects.inv  pyproject.toml
.claude/: FACADE_DECISIONS.md
.devcontainer/: Dockerfile  devcontainer.json
.github/release-announcer/: CLAUDE.md
.github/workflows/: release.yml  release_config.json
cldk/: core.py
cldk/analysis/: __init__.py
cldk/analysis/c/: c_analysis.py
cldk/analysis/c/clang/: clang_analyzer.py
cldk/analysis/commons/: backend_config.py
cldk/analysis/commons/treesitter/: models.py  treesitter_java.py  treesitter_python.py
cldk/analysis/commons/treesitter/utils/: treesitter_utils.py
cldk/analysis/go/: __init__.py  backend.py  go_analysis.py
cldk/analysis/go/codeanalyzer/: __init__.py  codeanalyzer.py
cldk/analysis/java/: backend.py  java_analysis.py
cldk/analysis/java/codeanalyzer/: _jdk.py  codeanalyzer.py
cldk/analysis/java/neo4j/: __init__.py  config.py  neo4j_backend.py  reconstruct.py
cldk/analysis/python/: backend.py  python_analysis.py
cldk/analysis/python/codeanalyzer/: __init__.py  cache.py  codeanalyzer.py
cldk/analysis/python/neo4j/: __init__.py  config.py  neo4j_backend.py  reconstruct.py
cldk/analysis/typescript/: __init__.py  backend.py  typescript_analysis.py
cldk/analysis/typescript/codeanalyzer/: __init__.py  codeanalyzer.py
cldk/analysis/typescript/neo4j/: __init__.py  config.py  neo4j_backend.py  neo4j_ingestor.py  reconstruct.py
cldk/graph/: _cpg_local.py  capability.py  engine.py  provider.py  result.py
cldk/models/c/: models.py
cldk/models/cpg/: __init__.py  base.py  models.py
cldk/models/go/: __init__.py  models.py
cldk/models/java/: __init__.py  models.py
cldk/models/python/: __init__.py  projections.py
cldk/models/typescript/: __init__.py  models.py
cldk/utils/exceptions/: __init__.py  exceptions.py
cldk/utils/sanitization/java/: treesitter_sanitizer.py  treesitter_utils.py
core-concepts/: index.html
installing/: index.html
quickstart/: index.html
scripts/: smoke_test_python_analysis.py
search/: search_index.json
tests/: conftest.py  test_core.py
tests/analysis/go/: test_go_analysis.py  test_go_e2e.py
tests/analysis/java/: test_inheritance_call_graph.py  test_java_analysis.py  test_java_backend_contract.py  test_java_neo4j_backend.py  test_java_neo4j_lookup_miss.py  test_java_neo4j_selection.py  test_java_sitter.py  test_jcodeanalyzer.py
tests/analysis/python/: test_python_analysis.py  test_python_backend_contract.py  test_python_bulk_accessors.py  test_python_method_lookup.py  test_python_neo4j_backend.py  test_python_neo4j_selection.py  test_python_schema_contract.py  test_treesitter_python.py
tests/analysis/typescript/: conftest.py  test_typescript_analysis.py  test_typescript_backend_contract.py  test_typescript_external_reconstruct.py  test_typescript_get_method_functions.py  test_typescript_neo4j_backend.py  test_typescript_neo4j_schema.py  test_typescript_neo4j_selection.py
tests/graph/: test_capability.py  test_cpg_local.py  test_engine_flows.py  test_engine_interproc.py  test_engine_slice.py  test_provider.py  test_result.py
tests/models/cpg/: test_accessor_contract.py  test_base_span.py  test_containers.py  test_edge_import.py  test_node.py  test_real_samples.py
tests/models/java/: test_java_models.py
tests/resources/cpg/: py-a1.json  py-a4.json  ts-a1.json  ts-a4.json
tests/resources/go/application/: go.mod  main.go
tests/resources/go/application/calc/: calc.go  formatter.go
tests/resources/go/application/pipeline/: pipeline.go
tests/resources/java/analysis_json/: analysis.json
tests/resources/java/application/: WeatherServlet.java
tests/resources/typescript/application/src/: controllers.ts  index.ts  models.ts  services.ts  util.ts
